<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="@dimen/padding_m"
    android:paddingVertical="@dimen/padding_xl"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textSize="@dimen/text_size_title"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
    >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_m"
            android:paddingVertical="@dimen/padding_l">
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_m"
                android:background="@drawable/button_primery"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_button"
                />
            <Button
                android:id="@+id/guest_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_white"
                android:text="@string/login_guest"
                android:textColor="@color/primery"
                android:textSize="@dimen/text_size_button"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>